feat: Integrate SQL.js for persistent data storage
Replaces local storage with SQL.js to provide a more robust and persistent data storage solution for articles and system state. This change ensures data is saved across sessions and can handle larger datasets more efficiently.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "sql.js": "https://esm.sh/sql.js@1.10.0"
   }
 }
 </script>
