--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/32x32.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/images/192x192.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="/images/192x192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
